--- a/app/components/map-explorer/template.hbs
+++ b/app/components/map-explorer/template.hbs
@@ -1,7 +1,7 @@
 <div id="map">
   {{#leaflet-map lat=lat lng=lng bbox=bbox zoom=zoom onLoad=(action "updatebbox") onMoveend=(action "updatebbox")}}
-		
-		{{tile-layer url="http://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png"}}
-	  	
-	{{/leaflet-map}}
+
+    {{tile-layer url="https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png"}}
+
+  {{/leaflet-map}}
 </div>
