--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -7,7 +7,7 @@
       {{text-box route="index" action="setTextBoxClosed"}}
     {{/unless}}
   {{/if}}
-  {{sidebar-title-transitland}}
+  {{sidebar-title-tpp}}
   <div class="btn-group-vertical" role="group" >
     {{#link-to 'routes' (query-params bbox=bbox onestop_id=null operated_by=null pin=pin style_routes_by=null pin=pin serves=null)}}<button class="btn btn-transparent-alt">Show Routes</button>{{/link-to}}
     {{#link-to 'stops' (query-params bbox=bbox onestop_id=null isochrone_mode=null pin=pin)}}<button class="btn btn-transparent-alt">Show Stops</button>{{/link-to}}
@@ -16,18 +16,12 @@
   <hr class="sidebar-hr">
   {{sidebar-title-mobility}}
   <div class="btn-group-vertical" role="group" >
-    {{#if valhallaServicesEnabled}}
-      {{#link-to 'isochrones' (query-params bbox=bbox pin=pin onestop_id=null isochrone_mode=null)}}
-        <button class="btn btn-transparent-alt">Generate Isochrones</button>
-      {{/link-to}}
-      {{#link-to 'map-matching' (query-params bbox=leafletBbox onestop_id=null served_by=null isochrone_mode=null operated_by=null pin=pin serves=null vehicle_type=null isochrone_mode=null trace=null)}}
-        <button class="btn btn-transparent-alt">Try Map Matching</button>
-      {{/link-to}}
-    {{else}}
-      <p><i class="fa fa-wrench"></i> We have some work to do behind the scenes. Soon you'll be able to use Mobility Explorer with <a href="https://github.com/transitland/mobility-explorer/issues/522">alternatives to the Mapzen Mobility APIs.</a></p>
-      <button class="btn btn-transparent-alt" disabled>Generate Isochrones</button>
-      <button class="btn btn-transparent-alt" disabled>Try Map Matching</button>
-    {{/if}}
+    {{#link-to 'isochrones' (query-params bbox=bbox pin=pin onestop_id=null isochrone_mode=null)}}
+      <button class="btn btn-transparent-alt">Generate Isochrones</button>
+    {{/link-to}}
+    {{#link-to 'map-matching' (query-params bbox=leafletBbox onestop_id=null served_by=null isochrone_mode=null operated_by=null pin=pin serves=null vehicle_type=null isochrone_mode=null trace=null)}}
+      <button class="btn btn-transparent-alt">Try Map Matching</button>
+    {{/link-to}}
   </div>
 </div>
 <div class="col-md-8">
@@ -56,7 +50,7 @@
             onclose=(action "clearPlace")
             as |repo|
           }}
-            {{repo.properties.label}}
+            {{repo.display_name}}
           {{/power-select}}
         </div>
       </div>
@@ -73,7 +67,7 @@
         {{#if webGL}}
           {{tangram-refill-basemap-layer}}
         {{else}}
-          {{tile-layer url="http://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png" attribution=attribution}}
+          {{tile-layer url="https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png" attribution=attribution}}
         {{/if}}
         {{#if pin}}
           {{#marker-layer location=pinLocation icon=icon draggable=true riseOnHover=true riseOffset=1000}}
