--- a/app/route-stop-patterns/template.hbs
+++ b/app/route-stop-patterns/template.hbs
@@ -3,138 +3,138 @@
     {{#link-to 'index' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null isochrone_mode=null pin=pin)}}<h1>Mobility Explorer</h1>{{/link-to}}
   </div>
   {{#if media.isMobile}}
-		{{#unless textboxIsClosed}}
-	    {{text-box route="index" action="setTextBoxClosed"}}
-	  {{/unless}}
-	{{/if}}
-	{{sidebar-title-transitland}}
-	<div class="btn-group-vertical" role="group" >
-	  {{#link-to 'routes' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null vehicle_type=null style_routes_by=null)}}<button class="btn btn-mapzen-alt">Show Routes</button>{{/link-to}}
-	  <div class="expanded-selection">
-			{{#each model.traversedByRoute as |route|}}
-	  		{{#route-detail bbox=bbox onestop_id=route.onestop_id route=route}}{{/route-detail}}
-  		{{/each}}
-			<br>
-			<div class="form-group">
-		  	{{#if displayStops}}<input type="checkbox" id="check-1" name="option-one" checked {{action "displayStops"}}>
-		  	{{else}}<input type="checkbox" id="check-1" name="option-one" {{action "displayStops"}}>{{/if}}
-		    <label for="check-1">Show stops served by route</label>
-		  </div>
-		  {{#if displayStops}}
-		  	{{#unless selectedRsp}}
-		  		<div class="svg-wrapper-legend-route-only">
-		  			<row>
-					    <svg class="svg-stop-legend" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="15px" height="15px" viewBox="0 0 180 180" enable-background="new 0 0 180 180" xml:space="preserve">
-					    <path d="M90,14c-42.053,0-76,33.947-76,76c0,42.054,33.947,76,76,76c42.054,0,76-33.946,76-76C166,47.947,132.054,14,90,14L90,14z"/>
-					  	</svg> stops visited by route
-						</row>
-					</div>
-				{{/unless}}
-			{{/if}}
-		  {{#if selectedRsp}}
-		  	{{#if displayStops}}
-			  	<div class="svg-wrapper-legend-route">
-			  			<row>
-						    <svg class="svg-stop-legend" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="15px" height="15px" viewBox="0 0 180 180" enable-background="new 0 0 180 180" xml:space="preserve">
-						    <path d="M90,14c-42.053,0-76,33.947-76,76c0,42.054,33.947,76,76,76c42.054,0,76-33.946,76-76C166,47.947,132.054,14,90,14L90,14z"/>
-						  	</svg> stops visited by route
-							</row>
-						</div>
- 					<div class="svg-wrapper-legend-rsp">
- 						<row>
-					    <svg class="svg-stop-rsp" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="15px" height="15px" viewBox="0 0 180 180" enable-background="new 0 0 180 180" xml:space="preserve">
-					    <path d="M90,14c-42.053,0-76,33.947-76,76c0,42.054,33.947,76,76,76c42.054,0,76-33.946,76-76C166,47.947,132.054,14,90,14L90,14z"/>
-					  	</svg> stops visited by RSP
-						</row>
-					</div>
-				{{/if}}
-		  {{/if}}
-  		  <div>
-	  		<form>
-		  		<div class="form-group-header">{{#link-to 'routes' (query-params bbox=bbox onestop_id=traversed_by operated_by=null serves=null served_by=onestop_id vehicle_type=null isochrone_mode=null)  }}Hide route stop patterns{{/link-to}}</div>
-				  <div class="form-group">
-				  	 {{#each model.route_stop_patterns as |rsp|}}
-				  	 	{{#if rsp.is_selected}}
-		  					<input type="radio" id=rsp.onestop_id name="options" checked {{action "setRsp" rsp}}>
-		  				{{else}}
-		  					<input type="radio" id=rsp.onestop_id name="options" {{action "setRsp" rsp}}>
-		  				{{/if}}
-				  			<label for=rsp.onestop_id>{{rsp.onestop_id}}</label><br>
-		  				{{/each}}	
-				  </div>
-				 
-				</form>
-			</div>
+    {{#unless textboxIsClosed}}
+      {{text-box route="index" action="setTextBoxClosed"}}
+    {{/unless}}
+  {{/if}}
+  {{sidebar-title-tpp}}
+  <div class="btn-group-vertical" role="group" >
+    {{#link-to 'routes' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null vehicle_type=null style_routes_by=null)}}<button class="btn btn-mapzen-alt">Show Routes</button>{{/link-to}}
+    <div class="expanded-selection">
+      {{#each model.traversedByRoute as |route|}}
+        {{#route-detail bbox=bbox onestop_id=route.onestop_id route=route}}{{/route-detail}}
+      {{/each}}
+      <br>
+      <div class="form-group">
+        {{#if displayStops}}<input type="checkbox" id="check-1" name="option-one" checked {{action "displayStops"}}>
+        {{else}}<input type="checkbox" id="check-1" name="option-one" {{action "displayStops"}}>{{/if}}
+        <label for="check-1">Show stops served by route</label>
+      </div>
+      {{#if displayStops}}
+        {{#unless selectedRsp}}
+          <div class="svg-wrapper-legend-route-only">
+            <row>
+              <svg class="svg-stop-legend" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="15px" height="15px" viewBox="0 0 180 180" enable-background="new 0 0 180 180" xml:space="preserve">
+              <path d="M90,14c-42.053,0-76,33.947-76,76c0,42.054,33.947,76,76,76c42.054,0,76-33.946,76-76C166,47.947,132.054,14,90,14L90,14z"/>
+              </svg> stops visited by route
+            </row>
+          </div>
+        {{/unless}}
+      {{/if}}
+      {{#if selectedRsp}}
+        {{#if displayStops}}
+          <div class="svg-wrapper-legend-route">
+              <row>
+                <svg class="svg-stop-legend" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="15px" height="15px" viewBox="0 0 180 180" enable-background="new 0 0 180 180" xml:space="preserve">
+                <path d="M90,14c-42.053,0-76,33.947-76,76c0,42.054,33.947,76,76,76c42.054,0,76-33.946,76-76C166,47.947,132.054,14,90,14L90,14z"/>
+                </svg> stops visited by route
+              </row>
+            </div>
+          <div class="svg-wrapper-legend-rsp">
+            <row>
+              <svg class="svg-stop-rsp" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="15px" height="15px" viewBox="0 0 180 180" enable-background="new 0 0 180 180" xml:space="preserve">
+              <path d="M90,14c-42.053,0-76,33.947-76,76c0,42.054,33.947,76,76,76c42.054,0,76-33.946,76-76C166,47.947,132.054,14,90,14L90,14z"/>
+              </svg> stops visited by RSP
+            </row>
+          </div>
+        {{/if}}
+      {{/if}}
+        <div>
+        <form>
+          <div class="form-group-header">{{#link-to 'routes' (query-params bbox=bbox onestop_id=traversed_by operated_by=null serves=null served_by=onestop_id vehicle_type=null isochrone_mode=null)  }}Hide route stop patterns{{/link-to}}</div>
+          <div class="form-group">
+             {{#each model.route_stop_patterns as |rsp|}}
+              {{#if rsp.is_selected}}
+                <input type="radio" id=rsp.onestop_id name="options" checked {{action "setRsp" rsp}}>
+              {{else}}
+                <input type="radio" id=rsp.onestop_id name="options" {{action "setRsp" rsp}}>
+              {{/if}}
+                <label for=rsp.onestop_id>{{rsp.onestop_id}}</label><br>
+              {{/each}}
+          </div>
 
-			{{#if hoverStop}}
-				<div class="hover-detail">
-					<div>{{hoverStop.name}}</div>
-					<p class="caption">Click the stop for more information</p>
-				</div>
-			{{/if}}
-		</div>
-		{{#link-to 'stops' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null vehicle_type=null isochrone_mode=null)}}<button class="btn btn-transparent-alt">Show Stops</button>{{/link-to}}
-	  {{#link-to 'operators' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null vehicle_type=null)}}<button class="btn btn-transparent-alt">Show Operators</button>{{/link-to}} 
-	  {{url-builder entity="route_stop_patterns" server="Transitland" query="results" queryParams=queryParams traversed_by=traversed_by}}
-	</div>
-	<hr class="sidebar-hr">
-	{{sidebar-title-mobility}}
-	<div class="btn-group-vertical" role="group" > 
-	  {{#link-to 'isochrones' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null style_routes_by=null pin=pin isochrone_mode=null)}}<button class="btn btn-transparent-alt">Generate Isochrones</button>{{/link-to}}
-	  {{#link-to 'map-matching' (query-params bbox=leafletBbox onestop_id=null served_by=null isochrone_mode=null operated_by=null pin=pin serves=null vehicle_type=null isochrone_mode=null trace=null)}}<button class="btn btn-transparent-alt">Try Map Matching</button>{{/link-to}}
-	</div>
+        </form>
+      </div>
+
+      {{#if hoverStop}}
+        <div class="hover-detail">
+          <div>{{hoverStop.name}}</div>
+          <p class="caption">Click the stop for more information</p>
+        </div>
+      {{/if}}
+    </div>
+    {{#link-to 'stops' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null vehicle_type=null isochrone_mode=null)}}<button class="btn btn-transparent-alt">Show Stops</button>{{/link-to}}
+    {{#link-to 'operators' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null vehicle_type=null)}}<button class="btn btn-transparent-alt">Show Operators</button>{{/link-to}}
+    {{url-builder entity="route_stop_patterns" server="TPP" query="results" queryParams=queryParams traversed_by=traversed_by}}
+  </div>
+  <hr class="sidebar-hr">
+  {{sidebar-title-mobility}}
+  <div class="btn-group-vertical" role="group" >
+    {{#link-to 'isochrones' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null style_routes_by=null pin=pin isochrone_mode=null)}}<button class="btn btn-transparent-alt">Generate Isochrones</button>{{/link-to}}
+    {{#link-to 'map-matching' (query-params bbox=leafletBbox onestop_id=null served_by=null isochrone_mode=null operated_by=null pin=pin serves=null vehicle_type=null isochrone_mode=null trace=null)}}<button class="btn btn-transparent-alt">Try Map Matching</button>{{/link-to}}
+  </div>
 </div>
 <div class="col-md-8">
-	<div class="row">
-		{{#if media.isMobile}}
-	    <button type="button" class="collapsed collapse-tab" data-toggle="collapse" data-target="#sidebar">&#8597;</button>
-	  {{/if}}
-		{{#if currentlyLoading.isLoading}}<div class="loading-spinner-03"></div>{{/if}}
-	  <div id={{if currentlyLoading.isLoading 'map-loading' 'map'}}>  
-			<div class="location-search">
-		    {{#power-select
-		      search=(action "searchRepo")
-	        renderInPlace=true
-		      selected=place
-		      placeholder=searchbarContent
-		      onchange=(action "setPlace")
-		      as |repo|
-		    }}
-		      {{repo.properties.label}}
-		    {{/power-select}}
-		  </div>
-		  <div class="nonmobile-intro-textbox">
-	      {{#unless media.isMobile}}
-	        {{#unless textboxIsClosed}}
-	          {{text-box route="index" action="setTextBoxClosed"}}
-	        {{/unless}}
-	      {{/unless}}
-	    </div>
-			{{#leaflet-map bounds=leafletBounds onMoveend=(action "updateLeafletBbox") onDragend=(action "updateMapMoved") onMouseover=(action "mouseOver") onZoomend=(action "updateMapMoved")}}
-				{{#if webGL}}
+  <div class="row">
+    {{#if media.isMobile}}
+      <button type="button" class="collapsed collapse-tab" data-toggle="collapse" data-target="#sidebar">&#8597;</button>
+    {{/if}}
+    {{#if currentlyLoading.isLoading}}<div class="loading-spinner-03"></div>{{/if}}
+    <div id={{if currentlyLoading.isLoading 'map-loading' 'map'}}>
+      <div class="location-search">
+        {{#power-select
+          search=(action "searchRepo")
+          renderInPlace=true
+          selected=place
+          placeholder=searchbarContent
+          onchange=(action "setPlace")
+          as |repo|
+        }}
+          {{repo.properties.label}}
+        {{/power-select}}
+      </div>
+      <div class="nonmobile-intro-textbox">
+        {{#unless media.isMobile}}
+          {{#unless textboxIsClosed}}
+            {{text-box route="index" action="setTextBoxClosed"}}
+          {{/unless}}
+        {{/unless}}
+      </div>
+      {{#leaflet-map bounds=leafletBounds onMoveend=(action "updateLeafletBbox") onDragend=(action "updateMapMoved") onMouseover=(action "mouseOver") onZoomend=(action "updateMapMoved")}}
+        {{#if webGL}}
           {{tangram-refill-basemap-layer}}
         {{else}}
-          {{tile-layer url="http://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png" attribution=attribution}}
+          {{tile-layer url="https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png" attribution=attribution}}
         {{/if}}
-				{{#each model.traversedByRoute as |route|}}
-					{{#geojson-layer geoJSON=route.rsp_route_as_geojson_with_outline clickable=false onEachFeature=(action "onEachFeature")}}
-					{{/geojson-layer}}
-				{{/each}}
-				{{#each model.route_stop_patterns as |rsp|}}
-					{{#geojson-layer geoJSON=rsp.rsp_as_geojson_with_outline clickable=false onEachFeature=(action "onEachFeature")}}
-					{{/geojson-layer}}
-				{{/each}}
-				{{#if displayStops}}
-					{{#each model.stopsServedByRoute as |stop|}}
-			  		{{#marker-layer location=stop.location icon=(div-icon html=stop.html className=stop.icon_class iconSize=stop.icon_size) draggable=false clickable=true riseOnHover=true riseOffset=1000 onMouseover=(action "selectStop" stop) onMouseout=(action "unselectStop" stop) onClick=(action "setStopOnestopId" stop)}}
-			  		{{/marker-layer}}
-		  		{{/each}}
-		  		{{#each model.stops.features as |stop|}}
-			  		{{#marker-layer location=stop.geometry.coordinates icon=stop.icon draggable=false riseOnHover=true riseOffset=1000}}
-			  		{{/marker-layer}}
-		  		{{/each}}
-		  	{{/if}}
-			{{/leaflet-map}}
-		</div>
-	</div>
+        {{#each model.traversedByRoute as |route|}}
+          {{#geojson-layer geoJSON=route.rsp_route_as_geojson_with_outline clickable=false onEachFeature=(action "onEachFeature")}}
+          {{/geojson-layer}}
+        {{/each}}
+        {{#each model.route_stop_patterns as |rsp|}}
+          {{#geojson-layer geoJSON=rsp.rsp_as_geojson_with_outline clickable=false onEachFeature=(action "onEachFeature")}}
+          {{/geojson-layer}}
+        {{/each}}
+        {{#if displayStops}}
+          {{#each model.stopsServedByRoute as |stop|}}
+            {{#marker-layer location=stop.location icon=(div-icon html=stop.html className=stop.icon_class iconSize=stop.icon_size) draggable=false clickable=true riseOnHover=true riseOffset=1000 onMouseover=(action "selectStop" stop) onMouseout=(action "unselectStop" stop) onClick=(action "setStopOnestopId" stop)}}
+            {{/marker-layer}}
+          {{/each}}
+          {{#each model.stops.features as |stop|}}
+            {{#marker-layer location=stop.geometry.coordinates icon=stop.icon draggable=false riseOnHover=true riseOffset=1000}}
+            {{/marker-layer}}
+          {{/each}}
+        {{/if}}
+      {{/leaflet-map}}
+    </div>
+  </div>
 </div>
