--- a/app/route-stop-patterns/template.hbs
+++ b/app/route-stop-patterns/template.hbs
@@ -100,7 +100,7 @@
           onchange=(action "setPlace")
           as |repo|
         }}
-          {{repo.properties.label}}
+          {{repo.display_name}}
         {{/power-select}}
       </div>
       <div class="nonmobile-intro-textbox">
