--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -1,6 +1,6 @@
 <div id="sidebar" class="collapse in col-md-4">
   <div class="col-xs-12 no-padding">
-    <h1>Mobility Explorer</h1>
+    <h1><img alt="Logótipo TPP" src="assets/images/TPP-logo-blue-explorador.png" />Explorador TPP</h1>
   </div>
   {{#if media.isMobile}}
     {{#unless textboxIsClosed}}
